Testing title change

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </head>
 <body>
   <div class="wrap">
-    <h1 id="title">Event Countdown</h1>
+    <h1 id="title">Countdown</h1>
     <p class="subtitle" id="subtitle">Counting down to <span id="when"></span></p>
 
     <div class="grid" id="grid">
@@ -62,7 +62,7 @@
 
     <footer id="tzNote"></footer>
   </div>
-  
+
 <script>
   // === DATE AND EVENT LINES ===
   const EVENT_TITLE = "William's Birthday"; // Appears at the top
