--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <body>
   <div class="wrap">
     <h1 id="title">Countdown</h1>
-    <p class="subtitle" id="subtitle">Counting down to <span id="when"></span></p>
+    <p class="subtitle" id="subtitle">We're counting down to <span id="when"></span></p>
 
     <div class="grid" id="grid">
       <div class="cell"><div class="num" id="days">0</div><div class="label">Days</div></div>
