--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 <body>
 
   <!-- ✅ Responsive GIF element -->
-  <img class="bg-gif" src="OldWilliam.gif" alt="William" />
+  <img class="bg-gif" src="OldWilliam_Big.gif" alt="William" />
 
   <div class="countdown-wrap">
     <div class="grid" id="grid">
