Added narrow gif for small screens

--- a/index.html
+++ b/index.html
@@ -13,33 +13,19 @@
       margin: 0;
       overflow: hidden;
       font-family: var(--font);
-      background: transparent; /* let the GIF show through */
+      background: pink;
     }
 
-    /* Full-screen, responsive GIF that shrinks on phones; always visible */
     .bg-gif {
       position: fixed;
       inset: 0;
       margin: 0;
       width: 100vw;
       height: 100vh;
-      object-fit: contain;  /* show entire GIF, no cropping */
-      z-index: 0;           /* behind countdown, above page background */
-      background: pink;     /* fallback color while loading */
+      object-fit: contain;
+      z-index: -1; /* behind countdown */
+      background: pink;
     }
-
-    /* Optional "loading" text (hidden once GIF loads) */
-    .loading {
-      position: fixed;
-      inset: 0;
-      display: grid;
-      place-items: center;
-      z-index: 0;          /* same layer as GIF */
-      color: #444;
-      font-weight: 600;
-      background: transparent;
-    }
-    .loading.hidden { display: none; }
 
     .countdown-wrap {
       position: fixed;
@@ -48,7 +34,7 @@
       transform: translateX(-50%);
       width: min(700px, 95vw);
       text-align: center;
-      z-index: 1;          /* above the GIF */
+      z-index: 1;
     }
 
     .grid {
@@ -69,9 +55,10 @@
       white-space: nowrap;
     }
 
-    .label { opacity: .9; font-size: clamp(0.7rem, 2.5vw, 1.1rem); margin-top: 0.25rem; }
+    .label { opacity: .9; font-size: clamp(0.7rem, 2.5vw, 1.1rem); }
 
     .hidden { display: none !important; }
+
     .done {
       font-size: clamp(1.5rem, 5vw, 3rem);
       font-weight: bold;
@@ -88,18 +75,13 @@
 </head>
 <body>
 
-  <!-- Loading placeholder (auto-hides on load) -->
-  <div id="loading" class="loading">Loading image…</div>
-
-  <!-- Full-screen, responsive GIF -->
-  <!-- Make sure the filename/case matches exactly and the file is in repo root -->
-  <img
-    class="bg-gif"
-    src="OldWilliam_Big.gif"
-    alt="William"
-    onload="document.getElementById('loading').classList.add('hidden')"
-    onerror="document.getElementById('loading').textContent='Could not load OldWilliam_Big.gif';"
-  />
+  <!-- ✅ Responsive GIF chooser -->
+  <picture>
+    <!-- <= 600px wide = use narrow GIF -->
+    <source srcset="NarrowOldWilliam.gif" media="(max-width: 600px)">
+    <!-- Default = big GIF -->
+    <img class="bg-gif" src="OldWilliam_Big.gif" alt="William">
+  </picture>
 
   <div class="countdown-wrap">
     <div class="grid" id="grid">
@@ -124,10 +106,10 @@
       return;
     }
     const s = Math.floor(diff / 1000);
-    document.getElementById("days").textContent  = Math.floor(s / 86400);
+    document.getElementById("days").textContent = Math.floor(s / 86400);
     document.getElementById("hours").textContent = pad(Math.floor((s % 86400) / 3600));
-    document.getElementById("mins").textContent  = pad(Math.floor((s % 3600) / 60));
-    document.getElementById("secs").textContent  = pad(s % 60);
+    document.getElementById("mins").textContent = pad(Math.floor((s % 3600) / 60));
+    document.getElementById("secs").textContent = pad(s % 60);
   }
 
   tick();
