cropping formatting error fix

--- a/index.html
+++ b/index.html
@@ -73,10 +73,9 @@
       border-radius: .75rem;
     }
 
-    /* Phones: less cropping
+    /* Phones: less cropping */
     @media (max-width: 600px) {
       .bg-gif {
-        /* ✅ less cropping than full cover */
         object-fit: contain;
         transform: scale(1.08); /* zoom ~8% to reduce side bars */
         object-position: center center;
